Add from-uri command for generating a code from a given URI

--- a/pass-otp.1
+++ b/pass-otp.1
@@ -95,6 +95,11 @@ instead display a QR code using
 either to the terminal or graphically if supported.
 
 .TP
+\fBotp from-uri\fP [ \fI--clip\fP, \fI-c\fP ] \fIuri\fP
+
+Same as \fBcode\fP, but takes a URI as argument instead of \fIpass-name\fP.
+
+.TP
 \fBotp validate\fP \fIuri\fP
 
 Test a URI string for validity according to the Key Uri Format. For more
