typo: isser -> issuer

--- a/pass-otp.1
+++ b/pass-otp.1
@@ -59,7 +59,7 @@ for the key URI specification.
 The secret is consumed from stdin; specify \fI--echo\fP or \fI-e\fP to echo input
 when running this command interactively. If \fIpass-name\fP is not specified,
 convert the \fIissuer:accountname\fP URI label to a path in the form of
-\fIisser/accountname\fP. Prompt before overwriting an existing secret, unless
+\fIissuer/accountname\fP. Prompt before overwriting an existing secret, unless
 \fI--force\fP or \fI-f\fP is specified. This command is alternatively named
 \fBadd\fP.
 
